# bus-travel-backend

./: .env.example  API.md  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20231228_000001_create_cities.rs  m20231228_000002_create_users.rs  m20231228_000003_create_journeys.rs  m20231228_000004_create_bookings.rs  m20260114_000001_add_google_oauth.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs
src/entities/: booking.rs  city.rs  journey.rs  mod.rs  prelude.rs  user.rs
src/handlers/: admin.rs  auth.rs  driver.rs  mod.rs  traveller.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  role_rate_limit.rs
src/routes/: mod.rs
src/utils/: geo.rs  jwt.rs  mod.rs
